2010-08-15 Borut Razem <borut.razem AT siol.net>

	* support/regression/tests/bug3037889.c:
	  testBug3037889() renamed to Bug3037889()
	  so that the function is compiled but not executed

2010-08-13 Borut Razem <borut.razem AT siol.net>

	* device/lib/pic16/libc/stdio/fprintf.c,
	  device/lib/pic16/libc/stdio/printf.c,
	  device/lib/pic16/libc/stdio/printf_small.c,
	  device/lib/pic16/libc/stdio/printf_tiny.c,
	  device/lib/pic16/libc/stdio/putchar.c,
	  device/lib/pic16/libc/stdio/sprintf.c,
	  device/lib/pic16/libc/stdio/streams.c,
	  device/lib/pic16/libc/stdio/strmgpsim.c,
	  device/lib/pic16/libc/stdio/strmmssp.c,
	  device/lib/pic16/libc/stdio/strmputchar.c,
	  device/lib/pic16/libc/stdio/strmusart.c,
	  device/lib/pic16/libc/stdio/vfprintf.c,
	  device/lib/pic16/libc/stdio/vprintf.c,
	  device/lib/pic16/libc/stdio/vsprintf.c:
	  sdcc library license changed to GPL+LE

2010-08-12 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCloop.c (basicInduction): fixed bug 3034976 with patch 3043854,
	  thanks Ruud van Silfhout
	* support/regression/tests/bug3037889.c: added test for bug 3034976

2010-08-10 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/ds390/gen.c: fixed by applying patch from bug 3037889, thanks Patrik
	  Persson
	* src/SDCCerr.h,
	* src/SDCCerr.c (vwerror, werror, werrorfl): return if warning was printed
	* src/SDCCast.c (checkPtrCast): only print from and to types when warning
	  or error was printed
	* support/regression/tests/bug3037889.c: new, added

2010-08-09 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/tests/bug1757671.c: fixed for 64 bit arch
	* src/SDCCval.c (valMinus): applied new patch from bug 3037889,
	  thanks Patrik Persson

2010-08-08 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCval.c (valMinus): applied patch from bug 3037889 though not fixed,
	  thanks Patrik Persson
	* src/z80/gen.c (genCmp): fixed bug 3041519

2010-08-08 Maarten Brock <sourceforge.brock AT dse.nl>
